--- a/TimerAssessment/PastAssessment/PastAssessment.storyboard
+++ b/TimerAssessment/PastAssessment/PastAssessment.storyboard
@@ -30,7 +30,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" red="0.96470588235294119" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="94u-un-GK1" firstAttribute="centerX" secondItem="WkI-se-7ua" secondAttribute="centerX" id="4i2-i6-BDT"/>
                                     <constraint firstAttribute="height" constant="50" id="Mgi-b1-rPR"/>
