--- a/TimerAssessment/PastAssessment/PastAssessmentTableViewCell.xib
+++ b/TimerAssessment/PastAssessment/PastAssessmentTableViewCell.xib
@@ -11,15 +11,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="pastAssessmentTableViewCell" rowHeight="174" id="KGk-i7-Jjw" customClass="PastAssessmentTableViewCell" customModule="TimerAssessment" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="538" height="174"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="pastAssessmentTableViewCell" rowHeight="176" id="KGk-i7-Jjw" customClass="PastAssessmentTableViewCell" customModule="TimerAssessment" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="425" height="176"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="538" height="174"/>
+                <rect key="frame" x="0.0" y="0.0" width="425" height="176"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="diW-fH-YUn">
-                        <rect key="frame" x="438" y="20" width="80" height="80"/>
+                        <rect key="frame" x="325" y="20" width="80" height="80"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="80" id="4X5-ZT-un9"/>
                             <constraint firstAttribute="width" constant="80" id="iFC-Ac-OwO"/>
@@ -49,7 +49,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="測定日" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M0A-6J-m5q">
-                        <rect key="frame" x="30" y="70" width="52" height="30"/>
+                        <rect key="frame" x="20" y="70" width="52" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="52" id="94I-Wv-GY7"/>
                             <constraint firstAttribute="height" constant="30" id="EfK-D5-z0I"/>
@@ -59,7 +59,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mNg-cI-lSu">
-                        <rect key="frame" x="92" y="70" width="42" height="30"/>
+                        <rect key="frame" x="82" y="70" width="42" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="43P-YI-yyv"/>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="42" id="7te-8m-rUK"/>
@@ -73,7 +73,7 @@
                     <constraint firstItem="M0A-6J-m5q" firstAttribute="top" secondItem="DI3-5O-KXP" secondAttribute="bottom" constant="10" id="5Oe-Ld-eaf"/>
                     <constraint firstItem="DI3-5O-KXP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="50" id="E57-cb-DvB"/>
                     <constraint firstAttribute="trailing" secondItem="diW-fH-YUn" secondAttribute="trailing" constant="20" id="FQy-zv-bpg"/>
-                    <constraint firstItem="M0A-6J-m5q" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="TVh-6g-qYO"/>
+                    <constraint firstItem="M0A-6J-m5q" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="TVh-6g-qYO"/>
                     <constraint firstAttribute="bottomMargin" secondItem="M0A-6J-m5q" secondAttribute="bottom" constant="10" id="VzY-I5-kJq"/>
                     <constraint firstItem="diW-fH-YUn" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="cQJ-cQ-4dT"/>
                     <constraint firstItem="DI3-5O-KXP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="ftF-Oc-i4w" customClass="Pa"/>
@@ -87,7 +87,7 @@
                 <outlet property="createdAtLabel" destination="mNg-cI-lSu" id="CoC-bV-J6w"/>
                 <outlet property="timerResultNumLabel" destination="DI3-5O-KXP" id="Vo0-p4-7Oe"/>
             </connections>
-            <point key="canvasLocation" x="302.89855072463769" y="155.35714285714286"/>
+            <point key="canvasLocation" x="221.01449275362322" y="154.6875"/>
         </tableViewCell>
     </objects>
     <resources>
